--- a/app-root/nginx/nginx.conf
+++ b/app-root/nginx/nginx.conf
@@ -2,10 +2,7 @@ server {
 
   listen 80;
 
-  add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-  add_header 'Access-Control-Allow-Credentials' 'true' always;
-  add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
-  add_header 'Access-Control-Allow-Headers' 'Accept,Authorization,Cache-Control,Content-Type,DNT,If-Modified-Since,Keep-Alive,Origin,User-Agent,X-Requested-With' always;
+  add_header 'Access-Control-Allow-Origin' *;
 
   location / {
     root   /usr/share/nginx/html;
