Link-Communication in and between Frontends + relative static-resource urls
- put each javascript frontend into unique sub-directory (/app1, /app2, ..)
- portal: proxy-pass static asset requests to each frontend-nginx
- some link examples inside app1 and between app1 and app2

--- a/app-first/nginx/nginx.conf
+++ b/app-first/nginx/nginx.conf
@@ -1,20 +1,30 @@
 server {
 
-  listen 80;
+	listen 80;
+	root   /usr/share/nginx/html;
+	index  index.html;
 
-  add_header 'Access-Control-Allow-Origin' "*";
+	 #dont add no-cache headers for static content...
+	location /static {
+	}
+	location ~ /app1(/static.*) {
+		try_files $1 =404;
+	}
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+#make the frontend asset-manifest.json accessable from any sub-directory url
+	location ~ asset-manifest.json$ {
+		try_files $uri /asset-manifest.json =404;
+		add_header 'Access-Control-Allow-Origin' "*";
+		add_header Cache-Control "no-store, no-cache, must-revalidate";
+	}
 
-    try_files $uri /index.html;
-  }
+	location / {
+		try_files $uri $uri/ /index.html;
+		add_header Cache-Control "no-store, no-cache, must-revalidate";
+	}
 
-  error_page   500 502 503 504  /50x.html;
-
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
-
+	error_page   500 502 503 504  /50x.html;
+	location = /50x.html {
+		root   /usr/share/nginx/html;
+	}
 }
