--- a/app-root/nginx/nginx.conf
+++ b/app-root/nginx/nginx.conf
@@ -1,20 +1,39 @@
 server {
 
-  listen 80;
+	#DNS BadGateway Probleme nach $CONTAINER Neustart umschiffen, siehe https://www.nginx.com/blog/dns-service-discovery-nginx-plus/
+	#10s TTL festlegen, sonst ignoriert nginx die TTL und nach restart eine containers kann die gecachte IP falsch sein
+	resolver 127.0.0.11 valid=10s;
 
-  add_header 'Access-Control-Allow-Origin' *;
+	listen 80;
+	root   /usr/share/nginx/html;
+	index  index.html;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
+	location /static {
+	 #dont add no-cache headers for static content...
+	}
 
-    try_files $uri /index.html;
-  }
+#TODO: how can we avoid these static configuration for each micro-frontend?
+#### static redirect/reverse-proxy access to static resources from micro-frontends
+	#redirect static-resource-requests AND ONLY THESE to app1-nginx
+	location /app1/static {
+		set $backend_server mfe-app-first;
+		proxy_pass http://$backend_server;
+	}
+	#redirect static-resource-requests AND ONLY THESE to app2-nginx
+	location /app2/static {
+		set $backend_server mfe-app-second;
+		proxy_pass http://$backend_server;
+	}
+####
 
-  error_page   500 502 503 504  /50x.html;
+	location / {
+		try_files $uri $uri/ /index.html;
+		add_header Cache-Control "no-store, no-cache, must-revalidate";
+	}
 
-  location = /50x.html {
-    root   /usr/share/nginx/html;
-  }
+	error_page   500 502 503 504  /50x.html;
+	location = /50x.html {
+		root   /usr/share/nginx/html;
+	}
 
 }
