--- a/app-second/package.json
+++ b/app-second/package.json
@@ -7,7 +7,8 @@
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "PORT=3002 react-app-rewired start",
