ServiceWorker solution for "fetch-static-assets-from-microfrontends" and bvo-theme added
- simple service-worker.js to allow redirect of static-assets-load calls to micro-frontends
portal-nginx rule is not needed anymore if service-worker is available/running
the rule is still there as an fallback.
- added bvo-theme for testing purposes

--- a/app-first/Dockerfile
+++ b/app-first/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:12.16.1-alpine3.9 as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY ./package.json /app/
+COPY ./package.json ./.npmrc /app/
 RUN yarn --silent
 COPY . /app
 RUN yarn build
