--- a/app-root/nginx/nginx.conf
+++ b/app-root/nginx/nginx.conf
@@ -24,6 +24,11 @@ server {
 		set $backend_server mfe-app-second;
 		proxy_pass http://$backend_server;
 	}
+#generic try to rewrite/reverse-proxy static assets
+#	location ~ ^/(.+)/static {
+#		set $backend_server $1;
+#		proxy_pass http://$backend_server;
+#	}
 ####
 
 	location / {
