--- a/app-second/Dockerfile
+++ b/app-second/Dockerfile
@@ -1,8 +1,8 @@
 # stage1 - build react app first
-FROM node:12.16.1-alpine3.9 as build
+FROM node:15-buster as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY ./package.json /app/
+COPY ./package.json ./.npmrc /app/
 RUN yarn --silent
 COPY . /app
 RUN yarn build
