--- a/app-root/Dockerfile
+++ b/app-root/Dockerfile
@@ -2,7 +2,7 @@
 FROM node:12.16.1-alpine3.9 as build
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
-COPY ./package.json /app/
+COPY ./package.json ./.npmrc /app/
 RUN yarn --silent
 COPY . /app
 RUN yarn build
