--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,32 @@
 version: '3.7'
 
 services:
-#  mfe-reverse-proxy:
-#    container_name: mfe-reverse-proxy
-#    hostname: reverse-proxy
-#    image: nginx
-#    ports:
-#      - 80:80
-#      - 443:443
-#    volumes:
-#      - nginx/reverse-proxy.conf:/etc/nginx/conf.d
-  mfe-app-root:
+  #reverse proxy for portal and apps (can be combined with portal for non-development use-case)
+  proxy:
+    hostname: proxy
+    domainname: localhost
+    image: nginx
+    ports:
+      - 80:80
+    volumes:
+      - ./nginx/templates:/etc/nginx/templates
+    #*_HOST and PORT defines where the calls should go. portal/app1/app2/.. means the call go into docker-container.
+    environment:
+      #PORTAL_HOST: 192.168.2.121  #overriden to run the portal as nodejs for faster development
+      #PORTAL_PORT: 3000
+      PORTAL_HOST: portal
+      PORTAL_PORT: 80
+      APP1_HOST: app1
+      APP1_PORT: 80
+      APP2_HOST: app2
+      APP2_PORT: 80
+
+  portal:
     build: ./app-root
-    image: mfe-app-root:latest
-    ports:
-      - 3000:80
-  mfe-app-first:
+    image: portal:latest
+  app1:
     build: ./app-first
-    image: mfe-app-first:latest
-    ports:
-      - 3001:80
-  mfe-app-second:
+    image: app1:latest
+  app2:
     build: ./app-second
-    image: mfe-app-second:latest
-    ports:
-      - 3002:80
+    image: app2:latest
