Responsive-IFrames, ServiceWorker and more
- "dynamic" App Configs simulated (/apps.json)
- IFrame integration with "auto-resize" from postMessage
- Deep-Links into SPA/IFrame Frontends
- more Apps integrated, example modified-SPA/IFrame Version (tag=next-gen)

--- a/app-root/nginx/nginx.conf
+++ b/app-root/nginx/nginx.conf
@@ -5,6 +5,10 @@ server {
 
 	location /static {
 	}
+  	location ~ .*(/static/.*) {
+  		try_files $1 =404;
+    	add_header 'Access-Control-Allow-Origin' *;
+  	}
 
 	location / {
 		try_files $uri $uri/ /index.html;
