--- a/nginx/templates/00_portal.conf.template
+++ b/nginx/templates/00_portal.conf.template
@@ -1,6 +1,6 @@
 server {
 	resolver 127.0.0.11 valid=10s;
-	server_name portal.localhost;
+	server_name portal.bvo.localhost localhost;
 	location / {
 		set $backend_server ${PORTAL_HOST};
 		proxy_pass http://$backend_server:${PORTAL_PORT};
