--- a/nginx/templates/10_app2.conf.template
+++ b/nginx/templates/10_app2.conf.template
@@ -1,6 +1,6 @@
 server {
 	resolver 127.0.0.11 valid=10s;
-	server_name app2.localhost;
+	server_name app2.bvo.localhost;
 	location / {
 		set $backend_server ${APP2_HOST};
 		proxy_pass http://$backend_server:${APP2_PORT};
